# QRcon

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
src/: .directory  CMakeLists.txt  config.h.in  qcvarcommand.cpp  qcvarcommand.h  qrcon.h  qrcon.pc.in  qrconcommand.cpp  qrconcommand.h  qrconexport.h  qrconserverconfig.cpp  qrconserverconfig.h  qrconsession.cpp  qrconsession.h
